<resources>
    <string name="image_color">Choose a color</string>
    <string name="color_teal">Teal</string>
    <string name="color_maroon">Maroon</string>
    <string name="color_black">Black</string>
    <string name="color_green">Green</string>
    <string name="color_navy">Navy</string>
    <plurals name="match_count">
        <item quantity="one">Using %d artwork</item>
        <item quantity="other">Using %d artworks</item>
    </plurals>
    <plurals name="match_count_debug">
        <item quantity="one">Using %d artwork (%d%%)</item>
        <item quantity="other">Using %d artworks (%d%%)</item>
    </plurals>

    <string name="toast_enable">Select Studio Ghibli in Muzei</string>
    <string name="toast_enable_source">Select Studio Ghibli from the list of Sources in Muzei</string>
    <string name="toast_muzei_missing_error">You must install Muzei to use this Source</string>
    <string name="toast_play_store_missing_error">Could not install Muzei from the Google Play Store</string>
</resources>
