<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/matches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Muzei.Medium"/>

    <TextView
        android:id="@+id/title_colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/image_color"
        android:textAppearance="@style/TextAppearance.Muzei.Medium"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow>

            <View
                android:id="@+id/olive"
                android:layout_width="@dimen/color_button_size"
                android:layout_height="@dimen/color_button_size"
                android:layout_margin="5dp"
                android:background="#FF808000"
                android:onClick="onColor"
                android:visibility="invisible"/>

            <ImageButton
                android:id="@+id/teal"
                android:layout_width="@dimen/color_button_size"
                android:layout_height="@dimen/color_button_size"
                android:layout_margin="5dp"
                android:background="@drawable/teal"
                android:contentDescription="@string/color_teal"
                android:onClick="onColor"
                android:src="@drawable/color_foreground"/>

            <View
                android:id="@+id/silver"
                android:layout_width="@dimen/color_button_size"
                android:layout_height="@dimen/color_button_size"
                android:layout_margin="5dp"
                android:background="#FFC0C0C0"
                android:onClick="onColor"
                android:visibility="invisible"/>
        </TableRow>

        <TableRow>

            <ImageButton
                android:id="@+id/maroon"
                android:layout_width="@dimen/color_button_size"
                android:layout_height="@dimen/color_button_size"
                android:layout_margin="5dp"
                android:background="@drawable/maroon"
                android:contentDescription="@string/color_maroon"
                android:onClick="onColor"
                android:src="@drawable/color_foreground"/>

            <ImageButton
                android:id="@+id/black"
                android:layout_width="@dimen/color_button_size"
                android:layout_height="@dimen/color_button_size"
                android:layout_margin="5dp"
                android:background="@drawable/black"
                android:contentDescription="@string/color_black"
                android:onClick="onColor"
                android:src="@drawable/color_foreground"/>

            <ImageButton
                android:id="@+id/green"
                android:layout_width="@dimen/color_button_size"
                android:layout_height="@dimen/color_button_size"
                android:layout_margin="5dp"
                android:background="@drawable/green"
                android:contentDescription="@string/color_green"
                android:onClick="onColor"
                android:src="@drawable/color_foreground"/>
        </TableRow>

        <TableRow>

            <View
                android:id="@+id/grey"
                android:layout_width="@dimen/color_button_size"
                android:layout_height="@dimen/color_button_size"
                android:layout_margin="5dp"
                android:background="#FF808080"
                android:onClick="onColor"
                android:visibility="invisible"/>

            <ImageButton
                android:id="@+id/navy"
                android:layout_width="@dimen/color_button_size"
                android:layout_height="@dimen/color_button_size"
                android:layout_margin="5dp"
                android:background="@drawable/navy"
                android:contentDescription="@string/color_navy"
                android:onClick="onColor"
                android:src="@drawable/color_foreground"/>

            <View
                android:id="@+id/purple"
                android:layout_width="@dimen/color_button_size"
                android:layout_height="@dimen/color_button_size"
                android:layout_margin="5dp"
                android:background="#FF800080"
                android:onClick="onColor"
                android:visibility="invisible"/>
        </TableRow>

    </TableLayout>

</LinearLayout>